--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://serhiiyan.github.io/react-cv",
   "dependencies": {
+    "@react-three/drei": "^9.16.0",
+    "@react-three/fiber": "^8.0.27",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +14,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
+    "three": "^0.142.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
